examples-generated/cluster/s2svpn/v1alpha1/connection.yaml

apiVersion: s2svpn.scaleway.upbound.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: s2svpn/v1alpha1/connection
  labels:
    testing.upbound.io/example-name: gateway
  name: gateway
spec:
  forProvider:
    gatewayType: VGW-S
    name: my-vpn-gateway
    privateNetworkIdSelector:
      matchLabels:
        testing.upbound.io/example-name: pn
