examples-generated/cluster/s2svpn/v1alpha1/gateway.yaml
apiVersion: s2svpn.scaleway.upbound.io/v1alpha1
kind: Gateway
metadata:
  annotations:
    meta.upbound.io/example-id: s2svpn/v1alpha1/gateway
  labels:
    testing.upbound.io/example-name: customer_gw
  name: customer-gw
spec:
  forProvider:
    asn: 65000
    ipv4PublicSelector:
      matchLabels:
        testing.upbound.io/example-name: example
    name: my-customer-gateway
